--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 
 ## => Site Settings
 ##############################
-text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
-highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
+text_skin: dark # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+highlight_theme: tomorrow-night-blue # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : BlogTech
@@ -28,7 +28,7 @@ description: > # this means to ignore newlines until "Language & timezone"
 ## => Language and Timezone
 ##############################
 lang: # the language of your site, default as "en"
-timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
+timezone: America/Bogota # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
 ## => Author and Social
@@ -37,7 +37,7 @@ author:
   type      : # "person" (default), "organization"
   name      : Jorge Martínez
   url       :
-  avatar    : # path or url of avatar image (square)
+  avatar    : https://1.bp.blogspot.com/-GQJ7uTsjGug/XJOlhgWzKOI/AAAAAAAAC8k/eCEVwTYpOtUsuYRzfoxt4mz_nkbehRjMACLcBGAs/s1600/Tecnologia%2B%25281%2529.jpg # path or url of avatar image (square)
   bio       : Soy Estudiante de Ingeniería Informática de la Fundación Universitaria Internacional de la Rioja, amante de la tecnología y el futbol.
   email     : Jorge.martinez.unidos@gmail.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
@@ -55,7 +55,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository:  Jorgemart90/jekyll-TeXt-theme 
 repository_tree: master
 
 
